# homework-keeper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  todo.md
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/api/: deps.py
backend/api/routes/: analytics.py  batch.py  family.py  items.py  subject.py  upload.py  v1_upload.py
backend/core/: __init__.py  request.py
backend/middleware/: __init__.py  request_id.py
backend/scripts/: __init__.py  add_user.py  create_dec30_batch.py  init.py  serve.py  test_ocr.py  test_vlm.py
backend/services/: holiday_service.py  homework_parser_service.py  homework_service.py  llm_service.py  ocr_service.py  vlm_service.py
docs/: deploy.md  llm_ocr.md  ocr-optimization.md  refactor-plan.md  registry-design.md  today-view-guide.md  ui-v1.md
frontend/: INTEGRATION_GUIDE.md  REGISTRY_README.md  editor.html  index.html  registry-test.html  registry.html  today.html
frontend/css/: base.css  common.css  editor.css  registry.css  styles.css  today.css
frontend/js/: api.js  app.js  editor-page.js  editor.js  registry.js  renderers.js  today.js  utils.js
frontend/templates/: today.html
scripts/: deploy.sh
