[project]
name = "homework-keeper"
version = "0.1.0"
description = "学生作业管理系统 - 通过 OCR 识别作业照片"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.12.0",
    "zhipuai>=2.1.5",
    "loguru>=0.7.0",
    "sniffio>=1.3.1",
    "chinesecalendar>=1.11.0",
    "pytz>=2025.2",
]

[project.scripts]
init = "backend.scripts.init:init_all"
serve = "backend.scripts.serve:main"
add-user = "backend.scripts.add_user:main"

[tool.setuptools]
packages = ["backend"]

[dependency-groups]
dev = []

[tool.uv]
package = true
